<resources>
    <string name="app_name">IzdeTapp</string>
    <string name="profile_and_settings">Profile and settings</string>
    <string name="profile_logo_description">profile logo description</string>
    <string name="name_surname">UserName UserSurname</string>
    <string name="my_posts">My posts</string>
    <string name="basket_profile_page">Basket</string>
    <string name="basket_icon_profile">basket icon</string>
    <string name="about_us_icon_profile_description">about us icon</string>
    <string name="about_us_profile">About us</string>
    <string name="gmail">Gmail</string>
    <string name="gmail_description">gmail icon profile</string>
    <string name="name_and_surname_description">name and surname description</string>
    <string name="logout_string">Logout</string>
    <string name="password_icon_profile">password icon</string>
    <string name="change_password_profile">Change password</string>
    <string name="my_posts_icon_profile">my posts icon</string>
    <string name="home">Home</string>
    <string name="sh_basket">Basket</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="news_a">President Joe Biden has laid out plans to vaccinate 70% of US adults by 4 July and roll out the shots for 12- to 15-year-olds as soon as possible. Mr Bidens new goal includes having 160 million adults fully vaccinated by Independence Day. The target is well within reach as 105 million have already had the required jabs, and the US is vaccinating nearly a million adults per day. But the vaccination rate is half of what it was just three weeks ago. Mr Biden said his administration was working to win over "doubters" about the shots. Israel - a world leader in vaccination rates - has nearly fully reopened its economy and seen its number of new coronavirus cases crash to almost zero, with just over 60% of the population having received at least one shot. Israel may be close to herd immunity to Covid Herd immunity happens when enough of a population has protection against an infection that it stops being able to spread - and even people who don\'t themselves have immunity are indirectly protected. For Covid the estimated threshold for herd immunity is at least 65%-70% of people having protection against infection, although Mr Biden\'s chief medical adviser Dr Anthony Fauci has increased his estimate to 90% and the World Health Organization (WHO) has said the level is not known. </string>
    <string name="news_b">Medical experts have yet again stressed upon the need to maintain Covid-19 appropriate behaviour even after one has received the first shot of vaccine. This for the simple reason that one is not immune against the virus till both the doses have been taken. And even after both the doses are taken, it would take certain time before immunity can kick in. Hence, if one isn’t careful then one could catch the virus even after a vaccine dose has been administered. India Today TV approached medical experts to get information on the issue as the Mumbai is undertaking simultaneous Phase One and Phase Two immunisation programme and is soon going to start with the registration for Phase Three drive. Doctor Rahul Pandit, Director-Critical Care, Fortis Hospital Mumbai says that antibodies develop within 15-20 days after the first dose which are inadequate to give protection and that it is after 15 days of the second dose when the antibodies effectively kick in. “One could be infected immediately after taking the 1st dose, could be a suspect patient, could have an active infection during the vaccination. Antibodies will give border protection only 15 days after the second dose, hence, coronavirus appropriate behaviour has to be maintained at all points.” he said. Recently, in Maharashtra, more than a dozen such Covid-19 positive cases came to light wherein the healthcare staff had already been administered the first vaccine dose. Doctor Lancelot Pinto, Consultant Pulmonologist, PD Hinduja Hospital and MRC says that positive cases even after the vaccine dose aren’t surprising or unexpected. He said, “One would expect the protection offered by the vaccine to take at least 2 weeks to manifest, and in the period before this, one can expect the risk of getting infected to be similar to that in the community. Even after 2 weeks, we know that the vaccine isn’t foolproof with a single dose.” On being asked about the issue of some healthcare workers getting infected after the first dose, he emphasises that the time when they got infected post-vaccination, the absolute percentage of healthcare workers who got infected and the severity of these infections would be important parameters to note. He adds, “There is evidence to suggest that one does not get severe disease post-vaccination, and if that is indeed the case, this would be very reassuring.” Doctor Pinto says that one shouldn’t be under the impression that the fear of the virus is behind us and we can let the birds down. </string>
    <string name="news_c">West Bengal chief minister Mamata Banerjee has announced that local train services shall be suspended in the state from Thursday onwards to combat the worsening coronavirus disease (Covid-19) pandemic situation. Meanwhile, metro rail and government-run transport services in West Bengal shall operate with 50% occupancy from Thursday, the chief minister announced. Click here for more details on the fresh Covid-19 curbs imposed in West Bengal on Wednesday. West Bengal on Tuesday reported its highest single-day deaths of 107 Covid-19 patients, which took the states death toll to 11,744, the health department had said in a bulletin. Meanwhile, a record number of new coronavirus disease cases were also registered, as the bulletin showed a single-day spike of 17,639 cases. West Bengals total Covid-19 infection tally currently stands at 8,98,533. The West Bengal chief minister also announced lockdown-like measures across the state to tackle the recent surge in Covid-19 cases, encountered in the second wave of the coronavirus disease. Shopping complexes, markets, gyms, cinema halls, and beauty parlours have been closed, while all manner of social and political gatherings have been prohibited. </string>
    <string name="news_d"> The ministry of home affairs has asked all the states and Union Territories to ensure that no fire incident occurs in any of the health facilities (particularly Covid-19 dedicated facilities) both in the government and private sector. The ministry has taken cognizance of occurrence of fire incidents, caused by short-circuiting, in hospitals and nursing homes in the last few days. In his letter to the states/UTs, Union home secretary Ajay Kumar Bhalla said that in the context of recent fire incidents and the impending summer season, either because of high temperature, lack of maintenance or high load on the internal wirings within the facilities, short circuiting takes place, leading to fire incidents and consequential loss of life and essential infrastructure. The communication added that care should be taken to put in place a plan of action to ensure that no fire incident occurs in these facilities. A fire was reported from a hospital in Vikaspuri on Tuesday in which 26 Covid-19 patients were rescued. Another fire was reported from Virar, Mumbai, on April 23 at Vijay Vallabh hospital in which 15 patients died. On April 25, three patients died in a Surat hospital fire. The MHA has asked the states/UTs to conduct a detailed review with officials from the health, power and fire departments, and prepare a detailed plan of action to ensure that fire safety measures are in place in all hospitals and health facilities. Bhalla also pointed out to the recently issued advisory of the Director General (Fire Services, Civil Defence and Home Guards) on fire safety in hospitals and nursing homes. The communication highlighted that a large number of Covid-19 cases are under treatment in Covid-dedicated health facilities across the country. “In most of the cases, oxygen supported beds, ICU beds, and ventilators are critical interventions, and therefore, it is important to ensure that there is uninterrupted power supply on regular 24x7 basis, in all the hospitals and medical facilities,” said Press Information Bureau in a statement. </string>
    <string name="news_e"> Gary Newman, 73, who has been stranded in India since March last year, filed a lawsuit against the Scott Morrison government also for threatening to prosecute those attempting to enter Australia with the possibility of a jail term and a penalty. A 73-year-old Australian, who is stranded in India since March last year, has filed a lawsuit before a Sydney court against the federal government for banning flights from India and threatening to prosecute those attempting to enter the country with the possibility of a jail term and a penalty, saying the move is “unconstitutional”. The lawyers of Gary Newman, who is stranded in Bengaluru since March last year, have argued in the federal court in Sydney that the ban was “unconstitutional”. The Australian government, for the first time in history, recently imposed a ban on its citizens from returning home, if they have spent time in India up to 14 days before flying back. The government threatened to prosecute them with a possibility of five years of jail term or a penalty of 66,000 Australian dollars (USD 50,899). Michael Bradley and Chris Ward lodged the application before Justice Stephen Burley on Wednesday afternoon. The application firstly said that the Commonwealth was acting outside its powers and secondly, Health Minister Greg Hunts declaration was in breach of an implied freedom to return home, ABC news reported. </string>
    <string name="news_f"> Former India hockey player and coach M.K. Kaushik has tested positive for COVID-19 and admitted to a nursing home here. The oxygen saturation level of the 66-year-old, a member of the 1980 Moscow Olympics gold-medal winning Indian team, keeps fluctuating, according to his family. "He is suffering from COVID-19 and is hospitalised in a city nursing home here," his son Ehsan told PTI. "He first developed symptoms on April 17 but RTPCR and RAT tests came negative. Then we did his CT scan on chest on April 24 and pneumonia due to Covid was detected. "Since then he has been hospitalised and his condition is between, neither stable nor serious. His oxygen level drops drastically at night which is a major issue," he added. Kaushik\'s wife was also getting treatment at the same hospital after contracting the virus but she is recovering well and is likely to be discharged this week."My mother has recovered now and she should be discharged within 2-3 days," Ehsan said.Kaushik had coached both the senior men’s and women’s teams. Under his coaching, India men\'s team had won its last major international tournament, the 1998 Asian Games, Bangkok.Also, Indian women\'s team had won bronze medal at the Doha Asian Games in 2006 under his coachingHe was given the Arjuna Award in 1998, before being bestowed with the Dronacharya award in 2002.India is battling a devastating second wave of COVID-19 pandemic which has been killing more than 3000 people everyday. </string>
    <string name="add">Add</string>
</resources>